"Overflow Exception and not accepting the values under boundary in System Page automatic sync interval field" issus is fixed.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6930 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -265,7 +265,7 @@
 		<value>An invalid disk space quota value was specified. Value must be between 1 and 2e+063 - 1.</value>
 	</data>
 	<data name="ERRORINVALIDSYNCINTERVAL">
-		<value>An invalid synchronization interval was specified. Value must be between 5 and 2e+031 - 1.</value>
+		<value>An invalid synchronization interval was specified. Value must be between 5 and 999.</value>
 	</data>
 	<data name="ERRORLOCKEXCEPTION">
 		<value>The operation was cancelled because the iFolder has been locked/disabled by the administrator.</value>
